--- a/index.html
+++ b/index.html
@@ -7,28 +7,30 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Contas API Frontend</h1>
+    <div class="container">
+        <h1>Contas API Frontend</h1>
 
-    <h2>Incluir Conta</h2>
-    <form id="addContaForm">
-        <label for="nome">Nome:</label>
-        <input type="text" id="nome" name="nome" required><br><br>
+        <h2>Incluir Conta</h2>
+        <form id="addContaForm">
+            <label for="nome">Nome:</label>
+            <input type="text" id="nome" name="nome" required><br><br>
 
-        <label for="valorOriginal">Valor Original:</label>
-        <input type="number" step="0.01" id="valorOriginal" name="valorOriginal" required><br><br>
+            <label for="valorOriginal">Valor Original:</label>
+            <input type="number" step="0.01" id="valorOriginal" name="valorOriginal" required><br><br>
 
-        <label for="dataVencimento">Data de Vencimento:</label>
-        <input type="date" id="dataVencimento" name="dataVencimento" required><br><br>
+            <label for="dataVencimento">Data de Vencimento:</label>
+            <input type="date" id="dataVencimento" name="dataVencimento" required><br><br>
 
-        <label for="dataPagamento">Data de Pagamento:</label>
-        <input type="date" id="dataPagamento" name="dataPagamento" required><br><br>
+            <label for="dataPagamento">Data de Pagamento:</label>
+            <input type="date" id="dataPagamento" name="dataPagamento" required><br><br>
 
-        <button type="submit">Adicionar Conta</button>
-    </form>
+            <button type="submit">Adicionar Conta</button>
+        </form>
 
-    <h2>Lista de Contas</h2>
-    <button id="fetchContasBtn">Atualizar Lista</button>
-    <ul id="contasList"></ul>
+        <h2>Lista de Contas</h2>
+        <button id="fetchContasBtn">Atualizar Lista</button>
+        <ul id="contasList"></ul>
+    </div>
 
     <script src="script.js"></script>
 </body>
