Ajuste nos registros da tabela e botão para limpar a lista

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
         <ul id="contasList"></ul>
         <button id="fetchContasBtn">Atualizar Lista</button>
+        <button id="clearContasBtn">Limpar Lista</button>
     </div>
 
     <script src="script.js"></script>
