Alteração do ícone do projeto

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contas API Frontend</title>
+    <link rel="icon" type="image/png" href="conta.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Contas API Frontend</h1>
+        <h1>Lista de Contas</h1>
 
-        <h2>Lista de Contas</h2>
         <form id="addContaForm">
             <label for="nome">Nome:</label>
             <input type="text" id="nome" name="nome" required><br>
