--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contas API Frontend</title>
-    <link rel="icon" type="image/png" href="conta.png">
+    <link rel="icon" type="image/png" href="icone.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Lista de Contas</h1>
+        <h1 class="title">Lista de Contas</h1>
 
         <form id="addContaForm">
             <label for="nome">Nome:</label>
@@ -26,7 +26,6 @@
 
             <button type="submit">Adicionar Conta</button>
         </form>
-
 
         <ul id="contasList"></ul>
         <button id="fetchContasBtn">Atualizar Lista</button>
