--- a/index.html
+++ b/index.html
@@ -9,27 +9,35 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="title">Lista de Contas</h1>
+        <div class="left-panel">
+            <h1 class="title">Adicionar Conta</h1>
 
-        <form id="addContaForm">
-            <label for="nome">Nome:</label>
-            <input type="text" id="nome" name="nome" required><br>
+            <form id="addContaForm">
+                <label for="nome">Nome:</label>
+                <input type="text" id="nome" name="nome" required><br>
 
-            <label for="valorOriginal">Valor Original:</label>
-            <input type="number" step="0.01" id="valorOriginal" name="valorOriginal" required><br>
+                <label for="valorOriginal">Valor Original:</label>
+                <input type="number" step="0.01" id="valorOriginal" name="valorOriginal" required><br>
 
-            <label for="dataVencimento">Data de Vencimento:</label>
-            <input type="date" id="dataVencimento" name="dataVencimento" required><br>
+                <label for="dataVencimento">Data de Vencimento:</label>
+                <input type="date" id="dataVencimento" name="dataVencimento" required><br>
 
-            <label for="dataPagamento">Data de Pagamento:</label>
-            <input type="date" id="dataPagamento" name="dataPagamento" required><br>
+                <label for="dataPagamento">Data de Pagamento:</label>
+                <input type="date" id="dataPagamento" name="dataPagamento" required><br>
 
-            <button type="submit">Adicionar Conta</button>
-        </form>
+                <div class="button-container">
+                    <button type="submit">Adicionar Conta</button>
+                </div>
+            </form>
+        </div>
+        
+        <div class="right-panel">
+            <h1 class="title">Lista de Contas</h1>
 
-        <ul id="contasList"></ul>
-        <button id="fetchContasBtn">Atualizar Lista</button>
-        <button id="clearContasBtn">Limpar Lista</button>
+            <ul id="contasList"></ul>
+            <button id="fetchContasBtn">Atualizar Lista</button>
+            <button id="clearContasBtn">Limpar Lista</button>
+        </div>
     </div>
 
     <script src="script.js"></script>
